# game-server-dontstarvetogether

./: .bashrc  .envrc  .gitconfig  .gitignore  .tarignore  README.md  bootstrap.sh  configure.ac  logs  mods  run_dedicated_servers.sh  steam_login.sh
.github/workflows/: build.yml  generate-docs.yml  tfsec.yml  wowlua.yml
.klei/Agreements/DoNotStarveTogether/: agreements.ini
.klei/DoNotStarveTogether/: README.md  client_log.txt
.klei/DoNotStarveTogether/56899563/: client.ini
.klei/DoNotStarveTogether/56899563/CloudSaves/: steam_autocloud.vdf
.klei/DoNotStarveTogether/56899563/client_save/: inventory_cache_prod  inventory_cache_prod_sig  keyvalue_scrapbook4_prod  loadingtips  modindex  motd_info  ping_cache  pricing_cache  profile
.klei/DoNotStarveTogether/MyDediServer/: README.md  README.txt  adminlist.txt  cluster.ini  cluster_token.txt  dedicated_server_mods_setup.lua  modoverrides.lua  modsettings.lua  whitelist.txt  worldgenoverride.lua  worldgenoverrides.lua
.klei/DoNotStarveTogether/MyDediServer/Caves/: modoverrides.lua  server.ini  server_chat_log.txt  server_log.txt  worldgenoverride.lua
.klei/DoNotStarveTogether/MyDediServer/Master/: dedicated_server_mods_setup.lua  modoverrides.lua  mods  modsettings.lua  server.ini  server_log.txt  worldgenoverride.lua  worldgenoverride.lua.backup  worldgenoverrides.lua
brownfield/eu_north/: README.md  main.tf  provider.tf  terraform.tfvars  variables.tf
brownfield/eu_west/: README.md  main.tf  provider.tf  terraform.tfvars  variables.tf
brownfield/us_central/: README.md  main.tf  terraform.tfvars  variables.tf
brownfield/us_east_2/: main.tf  terraform.tfvars  variables.tf
container/: Containerfile  podman-compose.yml
deployments/eu_north/: franklin-lab.tfvars  lab-franklin.tfvars  main.tf  terraform.tfvars  variables.tf
deployments/eu_west/: README.md  franklin-lab.tfvars  terraform.tfvars  variables.tf
deployments/us_central/: README.md  franklin-lab.tfvars  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
deployments/us_east_2/: README.md  franklin-lab.tfvars  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
docs/: commands.txt  dedicated_server_mods_setup.lua  mod_list.csv  modoverrides.lua  mods.txt  notes.md  notes.txt  notes2.txt  seed.txt  terraform-lockfile.txt  worldgenoverride.lua
docs/html/: md_README.html  pages.html
docs/html/search/: all_0.js  pages_0.js
docs/latex/: md_README.tex  refman.tex
fyp_dist/: .gitignore  decrypt_save.py  dev_goals.txt  install_linux.sh
fyp_dist/cmake/: subdirlist.cmake
fyp_dist/src/loader/linux/: shim_curl.c  signatures.h
fyp_dist/src/loader/windows/: winmm_loader.cc
fyp_dist/src/modules/core/: core.hh  (+1 more)
modules/brownfield/: main.tf
modules/eu_north/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
modules/old_root/: main.tf  versions.tf
modules/root/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
pancho/: fyp
saves/: README.md  announcemod.txt  cluster.ini  dedicated_server_mods_setup.lua  gen_mod_override.sh  modoverrides.lua  modoverrides.lua.backup2  worldgenoverride.lua  worldgenoverride.lua-caves  worldgenoverrides.lua
src/fyp/: build.sh
src/fyp/.not.git/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
src/fyp/ghidra/: lunar_cpp_label.py
src/fyp/src/: fmt.hh  sigscan.cc  sigscan.h
src/fyp/toolchain/: linux.cmake
src/fyp_dist/: CMakeLists.txt  ChangeLog  README.md  build.ninja  build.sh  install_linux.sh  test.sh
src/fyp_dist/cmake/: subdirlist.cmake
src/fyp_dist/container/: Dockerfile
src/fyp_dist/lib/: libfunchook.so.2  libfunchook.so.2.0.0
src/fyp_dist/src/: fmt.hh  sigscan.cc
src/fyp_dist/src/loader/: CMakeLists.txt
src/fyp_dist/src/loader/linux/: CMakeLists.txt
src/fyp_dist/src/loader/windows/: CMakeLists.txt
src/fyp_dist/src/memutil/: CMakeLists.txt  hook.hh  module.hh
src/fyp_dist/src/memutil/linux/detail/: pageprotect.hh
src/fyp_dist/src/memutil/windows/detail/: libpe.cc  libpe.h  openmodule.hh  pageprotect.hh  sectionbounds.hh
src/fyp_dist/src/modules/: INIReader.h
src/fyp_dist/src/modules/core/: CMakeLists.txt  core.cc  main.hh  module_loader.cc  picosha2.h  updater.cc  updater.hh
src/fyp_dist/src/modules/core/linux/: signatures.h
src/fyp_dist/src/modules/core/linux/detail/: osdep.hh
src/fyp_dist/src/modules/core/windows/: signatures.h
src/fyp_dist/src/modules/core/windows/detail/: osdep.hh
src/fyp_dist/src/modules/maphack/: CMakeLists.txt  maphack.cc
src/fyp_dist/test/: README.md
src/fyp_dist/toolchain/: linux.cmake  windows.cmake
(+399 files in other folders)
